tz-local/resource/ingress_nginx/nginx-ingress-https.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: nginx
#  labels:
#    app: nginx
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: nginx
#  template:
#    metadata:
#      labels:
#        app: nginx
#    spec:
#      containers:
#      - name: nginx
#        image: nginx
#        ports:
#        - containerPort: 80
#
#---
#
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#  labels:
#    run: nginx
#spec:
#  ports:
#    - protocol: TCP
#      port: 80
#      targetPort: 80
#  selector:
#    app: nginx
#  type: ClusterIP
#
#---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-tls
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: test.NS.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  tls:
    - hosts:
        - test.NS.eks_project.eks_domain
      secretName: nginx-test-tls
